--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   <main>
     <div id="categories"></div>
     <div id="info-section"></div>
-    <div id="mealdb"></div>
-
+    <div id="featured-grid"></div>
 
     <section class="view-all">
       <a id="view-all-menu" href="#">View all recipies</a>
