--- a/categories-view.html
+++ b/categories-view.html
@@ -24,7 +24,10 @@
 
     <main>
         <h1>Categories by Region</h1>
+        
         <div class="filters" id="regions-filters" area-label="Regions filter"></div>
+            <a  href="/index.html" class="btn-ghost">← Back to Home</a>
+
         <div id="categories-grid"></div>
     </main>
     <footer>
