--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="featured-grid"></div>
 
     <section class="view-all">
-      <a id="view-all-menu" href="#">View all recipies</a>
+      <a id="view-all-menu" href="/categories-view.html">View all recipies</a>
 
     </section>
 
