--- a/categories-view.html
+++ b/categories-view.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="src/css/info.css">
     <link rel="stylesheet" href="src/css/view.css">
     <link rel="stylesheet" href="src/css/categories-view.css">
+    <link rel="stylesheet" href="src/css/form.css">
 
 
     <title>Document</title>
@@ -24,11 +25,27 @@
 
     <main>
         <h1>Categories by Region</h1>
-        
+
+
+
         <div class="filters" id="regions-filters" area-label="Regions filter"></div>
-            <a  href="/index.html" class="btn-ghost">← Back to Home</a>
+        <form id="recipe-search-form" role="search" aria-label="Search recipes" class="searchbar">
+            <input id="recipe-search" name="q" type="search" placeholder="Search recipes by name…" autocomplete="off"
+                aria-label="Search recipes by name" />
+            <button type="button" id="recipe-search-clear" aria-label="Clear search">✕</button>
+        </form>
+
+
+        <a href="/index.html" class="btn-ghost">← Back to Home</a>
 
         <div id="categories-grid"></div>
+        <form id="recipe-search-form" role="search" aria-label="Search recipes" class="searchbar">
+            <input id="recipe-search" name="q" type="search" placeholder="Search recipes by name…" autocomplete="off"
+                aria-label="Search recipes by name" />
+            <button type="button" id="recipe-search-clear" aria-label="Clear search">✕</button>
+        </form>
+
+
     </main>
     <footer>
         <div id="footer"></div>
@@ -40,6 +57,7 @@
 <script type="module" src="/src/js/footer.js" derfer></script>
 
 <script type="module" src="/src/js/api/categories-view.js" defer></script>
+
 
 
 
